# avisaver

./: Cargo.toml  LICENSE  README.md
modules/core/: Cargo.toml
modules/core/src/: lib.rs  settings.rs
modules/iced-ui/: Cargo.toml
modules/iced-ui/src/: application.rs  main.rs  utils.rs
modules/iced-ui/src/app/: mod.rs  root.rs  settings.rs  styles.rs
modules/iced-ui/src/app/icons/: mod.rs
modules/osc/: Cargo.toml
modules/osc/src/: error.rs  format.rs  lib.rs  queryserver.rs  zeroconf.rs
