[workspace]
resolver = "3"
members = ["modules/iced-ui", "modules/osc"]

[workspace.dependencies]
avisaver-osc = { path = "modules/osc" }

anyhow = "1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.20", features = ["server-auto", "server-graceful", "tokio"] }
iced = "0.14"
reqwest = "0.13"
rosc = "0.11"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zeroconf = "0.17"
