[workspace]
resolver = "3"
members = ["modules/iced-ui", "modules/osc"]

[workspace.dependencies]
avisaver-osc = { path = "modules/osc" }

anyhow = "1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.20", features = ["server-auto", "server-graceful", "tokio"] }
iced = "0.14"
rand = { version = "0.10", features = ["thread_rng"] }
reqwest = "0.13"
rosc = "0.11"
# the only zeroconf library that seems to work with vrchat
searchlight = { version = "0.3", features = ["broadcast"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple-dns = { version = "0.11" }
simple-mdns = { version = "0.6", features = ["async-tokio"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
