[workspace]
resolver = "3"
members = ["modules/core", "modules/iced-ui", "modules/osc"]

[workspace.dependencies]
avisaver-core = { path = "modules/core" }
avisaver-osc = { path = "modules/osc" }

anyhow = "1"
const_format = "0.2"
directories = "6"
enumset = "1"
futures = "0.3"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.20", features = ["server-auto", "server-graceful", "tokio"] }
iced = { version = "0.14", features = ["svg", "tokio"] }
lazy_static = "1"
rand = { version = "0.10", features = ["thread_rng"] }
reqwest = "0.13"
rosc = "0.11"
# the only zeroconf library that seems to work with vrchat
searchlight = { version = "0.3", features = ["broadcast"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync"] }
tokio-stream = "0.1"
toml = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
