[package]
name = "avisaver-iced-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
avisaver-osc.workspace = true
iced.workspace = true
rand.workspace = true
rosc.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
#zeroconf.workspace = true

#agnostic-mdns.workspace = true
searchlight.workspace = true
