[package]
name = "avisaver-iced-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
avisaver-core.workspace = true
avisaver-osc.workspace = true

enumset.workspace = true
iced.workspace = true
lazy_static.workspace = true
rosc.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
