[package]
name = "avisaver-osc"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper.workspace = true
hyper-util.workspace = true
reqwest.workspace = true
rosc.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
#zeroconf.workspace = true
serde.workspace = true
serde_json.workspace = true
simple-mdns.workspace = true
simple-dns.workspace = true
