[package]
name = "avisaver-osc"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper.workspace = true
hyper-util.workspace = true
rand.workspace = true
reqwest.workspace = true
rosc.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
searchlight.workspace = true
serde.workspace = true
serde_json.workspace = true
